--- a/task/pom.xml
+++ b/task/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>kievreclama</groupId>
+	<groupId>ua.kyiv</groupId>
 	<artifactId>informer</artifactId>
 	<version>1.2-SNAPSHOT</version>
 	<packaging>war</packaging>
